--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                     </p>                    
                     <div class="social-icons">
-                        <div><abbr title="=Curriculum"><a class="social-icon-curriculum" href="https://drive.google.com/file/d/1NCAXoUFLWKJnxMWguGKvSTDfGBLRJtZW/view?usp=sharing" target="_blank"><i class="fa-solid fa-file item-curriculum"></i></a></abbr></div>
+                        <div><abbr title="Portfólio"><a class="social-icon-curriculum" href="https://drive.google.com/file/d/18QLH6dNeEyvERqCSWulF00MAjOH5S8_h/view?usp=sharing" target="_blank"><i class="fa-solid fa-file item-curriculum"></i></a></abbr></div>
                         <div><a class="social-icon-linkedin" href="https://www.linkedin.com/in/elgabrielfreitas/" target="_blank"><i class="fab fa-linkedin-in item-linkedin"></i></a></div>
                         <div><a class="social-icon-github" href="https://github.com/elgabrielfreitas" target="_blank"><i class="fab fa-github item-github"></i></a></div>
                         <div><abbr title="Enviar e-mail"><a class="social-icon-email" href="mailto:bielfreitascontato@gmail.com"><i class="fa-solid fa-envelope item-email"></i></a></abbr></div>                       
@@ -246,7 +246,7 @@
             <section class="resume-section" id="contact">
                 <div class="resume-section-content">
                     <div class="social-icons">
-                        <div><abbr title="Curriculum"><a class="social-icon-curriculum" href="https://drive.google.com/file/d/1NCAXoUFLWKJnxMWguGKvSTDfGBLRJtZW/view?usp=sharing" target="_blank"><i class="fa-solid fa-file item-curriculum"></i></a></abbr></div>
+                        <div><abbr title="Portfólio"><a class="social-icon-curriculum" href="https://drive.google.com/file/d/18QLH6dNeEyvERqCSWulF00MAjOH5S8_h/view?usp=sharing" target="_blank"><i class="fa-solid fa-file item-curriculum"></i></a></abbr></div>
                         <div><abbr title="Linkedin"><a class="social-icon-linkedin" href="https://www.linkedin.com/in/elgabrielfreitas/" target="_blank"><i class="fab fa-linkedin-in item-linkedin"></i></a></abbr></div>
                         <div><abbr title="Github"><a class="social-icon-github" href="https://github.com/elgabrielfreitas" target="_blank"><i class="fab fa-github item-github"></i></a></abbr></div>
                         <div><abbr title="E-mail"><a class="social-icon-email" href="mailto:bielfreitascontato@gmail.com"><i class="fa-solid fa-envelope item-email"></i></a></abbr></div>                       
