--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Programador</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Formação</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Projetos</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre">Programador</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#formacao">Formação</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#habilidades">Habilidades</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projetos">Projetos</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contato">Contato</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,7 +48,7 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- Dev-->
-            <section class="resume-section" id="about">
+            <section class="resume-section" id="sobre">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Gabriel
@@ -76,7 +76,7 @@
             </section>
             <hr class="m-0" />
             <!-- Formação-->
-            <section class="resume-section" id="experience">
+            <section class="resume-section" id="formacao">
                 <div class="container-fluid py-5" id="qualification">
                     <div class="container">
                         <div class="position-relative d-flex align-items-start justify-content-center">
@@ -124,7 +124,7 @@
             </section>
             <hr class="m-0" />
             <!-- Habilidades-->
-            <section class="resume-section" id="skills">
+            <section class="resume-section" id="habilidades">
                 <div class="resume-section-content">
                     <div class="position-relative d-flex align-items-start justify-content-center">
                         <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gabriel Freitas</h1>
@@ -172,7 +172,7 @@
             </section>
             <hr class="m-0" />
             <!-- Projects-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="projetos">
                 <div class="container-fluid pt-5 pb-1" id="portfolio">
                     <div class="position-relative d-flex align-items-start justify-content-center">
                         <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Gabriel Freitas</h1>
@@ -243,7 +243,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <section class="resume-section" id="contact">
+            <section class="resume-section" id="contato">
                 <div class="resume-section-content">
                     <div class="social-icons">
                         <div><abbr title="Portfólio"><a class="social-icon-curriculum" href="https://drive.google.com/file/d/18QLH6dNeEyvERqCSWulF00MAjOH5S8_h/view?usp=sharing" target="_blank"><i class="fa-solid fa-file item-curriculum"></i></a></abbr></div>
