--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     </p>                    
                     <div class="social-icons">
                         <div><abbr title="Portfólio"><a class="social-icon-curriculum" href="https://drive.google.com/file/d/18QLH6dNeEyvERqCSWulF00MAjOH5S8_h/view?usp=sharing" target="_blank"><i class="fa-solid fa-file item-curriculum"></i></a></abbr></div>
-                        <div><a class="social-icon-linkedin" href="https://www.linkedin.com/in/elgabrielfreitas/" target="_blank"><i class="fab fa-linkedin-in item-linkedin"></i></a></div>
-                        <div><a class="social-icon-github" href="https://github.com/elgabrielfreitas" target="_blank"><i class="fab fa-github item-github"></i></a></div>
-                        <div><abbr title="Enviar e-mail"><a class="social-icon-email" href="mailto:bielfreitascontato@gmail.com"><i class="fa-solid fa-envelope item-email"></i></a></abbr></div>                       
-                        <div><a class="social-icon-phone" href="tel:+5511966625766" target="_blank"><i class="fa-solid fa-phone item-phone"></i></a></div>                
+                        <div><abbr title="Linkedin"><a class="social-icon-linkedin" href="https://www.linkedin.com/in/elgabrielfreitas/" target="_blank"><i class="fab fa-linkedin-in item-linkedin"></i></a></abbr></div>
+                        <div><abbr title="Github"><a class="social-icon-github" href="https://github.com/elgabrielfreitas" target="_blank"><i class="fab fa-github item-github"></i></a></abbr></div>
+                        <div><abbr title="Email"><a class="social-icon-email" href="mailto:bielfreitascontato@gmail.com"><i class="fa-solid fa-envelope item-email"></i></a></abbr></div>                       
+                        <div><abbr title="WhatsApp"><a class="social-icon-phone" href="tel:+5511966625766" target="_blank"><i class="fa-solid fa-phone item-phone"></i></a></abbr></div>                
                     </div>
                 </div>
             </section>
@@ -183,13 +183,21 @@
                             <div class="col-12 text-center mb-2">
                                 <ul class="list-inline mb-4" id="portfolio-flters">
                                     <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">Todos</li>
+                                    <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Sites</li>
                                     <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">React</li>
-                                    <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Landing Page</li>
                                     <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Vue</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row portfolio-container">
+                            <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                                <div class="position-relative overflow-hidden mb-2">
+                                    <img class="img-fluid rounded w-100" src="./assets/img/portfolio-5.jpg" alt="">
+                                    <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                        <a href="https://dardodigital.com.br/" target="_blank">Dardo Digital</a>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                                 <div class="position-relative overflow-hidden mb-2">
                                     <img class="img-fluid rounded w-100" src="./assets/img/portfolio-1.jpg" alt="">
@@ -210,7 +218,7 @@
                                 <div class="position-relative overflow-hidden mb-2">
                                     <img class="img-fluid rounded w-100" src="./assets/img/portfolio-3.jpg" alt="">
                                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                        <a href="https://administracao-de-eventos-eosin.vercel.app/" target="_blank">Eventos</a>
+                                        <a href="https://administracao-de-eventos-eosin.vercel.app/" target="_blank">Administração de Eventos</a>
                                 </div>
                                 </div>
                             </div>
@@ -222,19 +230,35 @@
                                 </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                                <div class="position-relative overflow-hidden mb-2">
-                                    <img class="img-fluid rounded w-100" src="./assets/img/portfolio-5.jpg" alt="">
-                                    <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                        <a href="https://ta-on-shop.vercel.app/" target="_blank">Tá ON Shop</a>
-                                </div>
-                                </div>
-                            </div>
                             <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
                                 <div class="position-relative overflow-hidden mb-2">
                                     <img class="img-fluid rounded w-100" src="./assets/img/portfolio-6.jpg" alt="">
                                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                             <a href="https://ichello-card.vercel.app/" target="_blank">Ichello Card</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                                <div class="position-relative overflow-hidden mb-2">
+                                    <img class="img-fluid rounded w-100" src="./assets/img/portfolio-7.jpg" alt="">
+                                    <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                            <a href="https://jlsol.net/" target="_blank">JL Soluções</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                                <div class="position-relative overflow-hidden mb-2">
+                                    <img class="img-fluid rounded w-100" src="./assets/img/portfolio-8.jpg" alt="">
+                                    <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                            <a href="https://leocostacomediante.com.br/" target="_blank">Léo Costa</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                                <div class="position-relative overflow-hidden mb-2">
+                                    <img class="img-fluid rounded w-100" src="./assets/img/portfolio-9.jpg" alt="">
+                                    <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                            <a href="https://drabrunafontana.link/index.php/dra-bruna-fontana/" target="_blank">Dra. Bruna Fontana</a>
                                     </div>
                                 </div>
                             </div>
@@ -250,7 +274,7 @@
                         <div><abbr title="Linkedin"><a class="social-icon-linkedin" href="https://www.linkedin.com/in/elgabrielfreitas/" target="_blank"><i class="fab fa-linkedin-in item-linkedin"></i></a></abbr></div>
                         <div><abbr title="Github"><a class="social-icon-github" href="https://github.com/elgabrielfreitas" target="_blank"><i class="fab fa-github item-github"></i></a></abbr></div>
                         <div><abbr title="E-mail"><a class="social-icon-email" href="mailto:bielfreitascontato@gmail.com"><i class="fa-solid fa-envelope item-email"></i></a></abbr></div>                       
-                        <div><abbr title="Whatsapp"><a class="social-icon-phone" href="tel:+5511966625766" target="_blank"><i class="fa-solid fa-phone item-phone"></i></a></abbr></div>                
+                        <div><abbr title="WhatsApp"><a class="social-icon-phone" href="tel:+5511966625766" target="_blank"><i class="fa-solid fa-phone item-phone"></i></a></abbr></div>                
                     </div>
                     <h1 class="mb-0" style="margin-top: 75px;">
                         Vamos trabalhar <span class="true-colors">juntos</span>!
